Add about product text

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
 				<div class="col-6 half-block vertical-align_center-right _order1">
 					<h2>Poznaj nasze plastry</h2>
 					<p class="subline">
-						Morbi et bibendum orci. Cras cursus, magna in convallis sagittis, turpis arcu iaculis urna.
+						Przedstawiamy wyjątkową kolekcję wędlin paczkowanych marki Olewnik, stworzoną z myślą o Waszym komforcie.
 					</p>
 					<p>
-						Morbi et bibendum orci. Cras cursus, magna in convallis sagittis, turpis arcu iaculis urna, vitae consectetur mauris felis eleifend ipsum. Duis sit amet tempor tellus. Sed et gravida lorem. Quisque luctus pharetra purus, eu dapibus diam efficitur et. Vestibulum vitae tellus lectus. 
+						W każdej hermetycznie zapakowanej tacce znajdziecie 30 cienkich, idealnie ukrojonych plasterków naszych popularnych kiełbas suchych: Krakowskiej oraz Żywieckiej. Nowa forma pakowania oznacza nie tylko wygodne porcje, po które możecie sięgnąć w dowolnym momencie, ale i długi termin przydatności do spożycia. Dzięki temu zawsze będziecie gotowi do przyrządzenia pysznej kanapki albo innej pożywnej przekąski, o każdej porze dnia i... nocy:) 
 					</p>
 					<a target="_blank" href="" class="button_filled red">
 						<i class="fas fa-file-download"></i><span>Pobiesz broszurę</span>
@@ -149,9 +149,9 @@
 				<div class="row">
 					<div class="col-8"></div>
 					<div class="col-4 half-block vertical-align_center-right dark">
-						<h2>Poznaj nasze plastry</h2>
+						<h2>Każdy detal ma znaczenie</h2>
 						<p class="subline">
-							Morbi et bibendum orci. Cras cursus, magna in convallis sagittis, turpis arcu iaculis urna.
+							Wszystko dopracowane do perfekcji. Każde ziarenko pieprzu, szczypta ziół, kryształek soli mają znaczenie.
 						</p>
 					</div>
 				</div>
