Minor responsive fixes for menu and benefits section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<a class="smooth" data-scroll href="#about"><li>Co się kroi?</li></a>
 					<a class="smooth" data-scroll href="#products"><li>Produkty</li></a>
 					<a class="smooth" data-scroll href="#contact"><li>Masz pytanie?</li></a>
-					<a class="_hidden _breakpoint1_visible" href="https://www.facebook.com/olewnikfanpage/"><li><i class="fab fa-facebook"></i></li></a>
+					<a class="_hidden _breakpoint1_visible" target="_blank" href="https://www.facebook.com/olewnikfanpage/"><li><i class="fab fa-facebook"></i></li></a>
 				</ul>
 			</nav>
 			<div class="offgrid_fb-shortcut _breakpoint1_hidden">
@@ -157,7 +157,7 @@
 				</div>
 				<div class="row">
 					<div class="col">
-						<a href="#products" class="button_outlined white">
+						<a data-scroll href="#products" class="button_outlined white smooth">
 							<span>Czytaj więcej</span><i class="fas fa-angle-down"></i></i>
 						</a>
 					</div>
@@ -172,32 +172,49 @@
 			<div class="inner-container">
 				<div id="products-carousel" class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner">
+						<!-- carousel single item -->
 						<div class="carousel-item active">
 					 		<div class="row">
 					 			<div class="col-6 half-block vertical-align_center-left dark _order2">
-									<h2>Żywiecka kiełbasa sucha</h2>
+									<h2>Krakowska sucha z szynki</h2>
 									<p class="subline">
-										Morbi et bibendum orci. Cras cursus, magna in convallis sagittis, turpis arcu iaculis urna.
+										100 g produktu wyprodukowano ze 143 g mięsa wieprzowego z szynki
 									</p>
 									<p>
-										Morbi et bibendum orci. Cras cursus, magna in convallis sagittis, turpis arcu iaculis urna, vitae consectetur mauris felis eleifend ipsum. Duis sit amet tempor tellus. Sed et gravida lorem. Quisque luctus pharetra purus, eu dapibus diam efficitur et. Vestibulum vitae tellus lectus. 
+										- Suszona minimum 100 godzin.<br>
+										- W opakowaniu 30 cienkich plasterków <br>
+										- Widoczne kawałki chudej szynki na przekroju <br>
+										- Bez dodatu barwników, glutaminianu monosodowego i fosforanów <br>
+										- Bardzo krucha
 									</p>
 									<ul class="nutrients-tags">
-										<li>
-											<p>Kj</p>
-											<p>760</p>
-										</li>
 										<li>
 											<p>Kcal</p>
 											<p>181</p>
 										</li>
 										<li>
 											<p><small>Tłuszcz</small></p>
-											<p>19g</p>
+											<p>7g</p>
 										</li>
 										<li>
-											<p><small>Kwas<br>tłusczowy</small></p>
-											<p>13g</p>
+											<p><small>Kwas<br>tłuszczowy</small></p>
+											<p>2,3g</p>
+										</li>
+										<li>
+											<p><small>Węglo-<br>wodany</small></p>
+											<p>1,3g</p>
+										</li>
+										<li>
+											<p><small>W tym<br> cukry</small></p>
+											<p>0,9g</p>
+										</li>
+										<li>
+											<p><small>Białko</small></p>
+											<p>28g</p>
+										</li>
+										<li>
+											<p><small>Sól</small></p>
+											<p>2,8g</p>
 										</li>
 									</ul>
 								</div>
@@ -206,40 +223,267 @@
 								</div>
 					 		</div>
 						</div>
+						<!-- end carousel single item -->
+						<!-- carousel single item -->
 						<div class="carousel-item">
 					 		<div class="row">
 					 			<div class="col-6 half-block vertical-align_center-left dark _order2">
-									<h2>Żywiecka kiełbasa sucha</h2>
+									<h2>Krakowska sucha z filetem z kurczaka</h2>
 									<p class="subline">
-										Morbi et bibendum orci. Cras cursus, magna in convallis sagittis, turpis arcu iaculis urna.
+										100 g produktu wyprodukowano ze 130 g mięsa z fileta z kurczaka i 13 g mięsa wieprzowego
 									</p>
 									<p>
-										Morbi et bibendum orci. Cras cursus, magna in convallis sagittis, turpis arcu iaculis urna, vitae consectetur mauris felis eleifend ipsum. Duis sit amet tempor tellus. Sed et gravida lorem. Quisque luctus pharetra purus, eu dapibus diam efficitur et. Vestibulum vitae tellus lectus. 
+										- Suszona minimum 100 godzin.<br>
+										- W opakowaniu 30 cienkich plasterków <br>
+										- Widoczne kawałki fileta z kurczaka na przekroju<br>
+										- Bez dodatu barwników, glutaminianu monosodowego i fosforanów <br>
+										- Bardzo krucha
 									</p>
 									<ul class="nutrients-tags">
 										<li>
-											<p>Kj</p>
-											<p>760</p>
-										</li>
-										<li>
 											<p>Kcal</p>
-											<p>181</p>
+											<p>189</p>
 										</li>
 										<li>
 											<p><small>Tłuszcz</small></p>
-											<p>19g</p>
+											<p>8g</p>
 										</li>
 										<li>
-											<p><small>Kwas<br>tłusczowy</small></p>
-											<p>13g</p>
+											<p><small>Kwas<br>tłuszczowy</small></p>
+											<p>3g</p>
+										</li>
+										<li>
+											<p><small>Węglo-<br>wodany</small></p>
+											<p>< 0,5g</p>
+										</li>
+										<li>
+											<p><small>W tym<br> cukry</small></p>
+											<p>< 0,5g</p>
+										</li>
+										<li>
+											<p><small>Białko</small></p>
+											<p>29g</p>
+										</li>
+										<li>
+											<p><small>Sól</small></p>
+											<p>2,2g</p>
 										</li>
 									</ul>
 								</div>
 								<div class="col-6 packshot vertical-align_center-right _order1">
-									<img src="./archive/images/krakowska-2.png" title="" alt="" />	
+									<img src="./archive/images/z_filetem.png" title="" alt="" />	
 								</div>
 					 		</div>
 						</div>
+						<!-- end carousel single item -->
+						<!-- carousel single item -->
+						<div class="carousel-item">
+					 		<div class="row">
+					 			<div class="col-6 half-block vertical-align_center-left dark _order2">
+									<h2>Kiełbasa krakowska pieczona sucha</h2>
+									<p class="subline">
+										100 g produktu wyprodukowano ze 143 g mięsa wieprzowego 
+									</p>
+									<p>
+										- Suszona minimum 100 godzin.<br>
+										- W opakowaniu 15 cienkich plasterków <br>
+										- Widoczne kawałki chudej szynki na przekroju<br>
+										- Bez dodatu barwników, glutaminianu monosodowego i fosforanów <br>
+										- Bardzo krucha
+									</p>
+									<ul class="nutrients-tags">
+										<li>
+											<p>Kcal</p>
+											<p>178</p>
+										</li>
+										<li>
+											<p><small>Tłuszcz</small></p>
+											<p>7g</p>
+										</li>
+										<li>
+											<p><small>Kwas<br>tłuszczowy</small></p>
+											<p>2,3g</p>
+										</li>
+										<li>
+											<p><small>Węglo-<br>wodany</small></p>
+											<p>1,2g</p>
+										</li>
+										<li>
+											<p><small>W tym<br> cukry</small></p>
+											<p>0,9g</p>
+										</li>
+										<li>
+											<p><small>Białko</small></p>
+											<p>28g</p>
+										</li>
+										<li>
+											<p><small>Sól</small></p>
+											<p>2,8g</p>
+										</li>
+									</ul>
+								</div>
+								<div class="col-6 packshot vertical-align_center-right _order1">
+									<img src="./archive/images/pieczona.png" title="" alt="" />	
+								</div>
+					 		</div>
+						</div>
+						<!-- end carousel single item -->
+						<!-- carousel single item -->
+						<div class="carousel-item">
+					 		<div class="row">
+					 			<div class="col-6 half-block vertical-align_center-left dark _order2">
+									<h2>Kiełbasa krakowska pieczona sucha</h2>
+									<p class="subline">
+										100 g produktu wyprodukowano ze 143 g mięsa wieprzowego 
+									</p>
+									<p>
+										- Suszona minimum 100 godzin.<br>
+										- W opakowaniu 15 cienkich plasterków <br>
+										- Widoczne kawałki chudej szynki na przekroju<br>
+										- Bez dodatu barwników, glutaminianu monosodowego i fosforanów <br>
+										- Bardzo krucha
+									</p>
+									<ul class="nutrients-tags">
+										<li>
+											<p>Kcal</p>
+											<p>178</p>
+										</li>
+										<li>
+											<p><small>Tłuszcz</small></p>
+											<p>7g</p>
+										</li>
+										<li>
+											<p><small>Kwas<br>tłuszczowy</small></p>
+											<p>2,3g</p>
+										</li>
+										<li>
+											<p><small>Węglo-<br>wodany</small></p>
+											<p>1,2g</p>
+										</li>
+										<li>
+											<p><small>W tym<br> cukry</small></p>
+											<p>0,9g</p>
+										</li>
+										<li>
+											<p><small>Białko</small></p>
+											<p>28g</p>
+										</li>
+										<li>
+											<p><small>Sól</small></p>
+											<p>2,8g</p>
+										</li>
+									</ul>
+								</div>
+								<div class="col-6 packshot vertical-align_center-right _order1">
+									<img src="./archive/images/pieczona.png" title="" alt="" />	
+								</div>
+					 		</div>
+						</div>
+						<!-- end carousel single item -->
+						<!-- carousel single item -->
+						<div class="carousel-item">
+					 		<div class="row">
+					 			<div class="col-6 half-block vertical-align_center-left dark _order2">
+									<h2>Kiełbasa żywiecka sucha z szynki</h2>
+									<p class="subline">
+										100 g produktu wyprodukowano ze 143 g mięsa wieprzowego z szynki
+									</p>
+									<p>
+										- Suszona minimum 100 godzin.<br>
+										- W opakowaniu 30 cienkich plasterków <br>
+										- Widoczne kawałki chudej szynki na przekroju<br>
+										- Bez dodatu barwników, glutaminianu monosodowego i fosforanów <br>
+										- Bardzo krucha
+									</p>
+									<ul class="nutrients-tags">
+										<li>
+											<p>Kcal</p>
+											<p>189</p>
+										</li>
+										<li>
+											<p><small>Tłuszcz</small></p>
+											<p>9,2g</p>
+										</li>
+										<li>
+											<p><small>Kwas<br>tłuszczowy</small></p>
+											<p>3,6g</p>
+										</li>
+										<li>
+											<p><small>Węglo-<br>wodany</small></p>
+											<p>0,5g</p>
+										</li>
+										<li>
+											<p><small>W tym<br> cukry</small></p>
+											<p>< 0,5g</p>
+										</li>
+										<li>
+											<p><small>Białko</small></p>
+											<p>26g</p>
+										</li>
+										<li>
+											<p><small>Sól</small></p>
+											<p>2,3g</p>
+										</li>
+									</ul>
+								</div>
+								<div class="col-6 packshot vertical-align_center-right _order1">
+									<img src="./archive/images/zywiecka1.png" title="" alt="" />	
+								</div>
+					 		</div>
+						</div>
+						<!-- end carousel single item -->
+						<!-- carousel single item -->
+						<div class="carousel-item">
+					 		<div class="row">
+					 			<div class="col-6 half-block vertical-align_center-left dark _order2">
+									<h2>Mix krakowska</h2>
+									<p class="subline">
+										W skład miksu wchodzi kiełbasa krakowska sucha z szynki oraz kiełbasa krakowska sucha z filetem z kurczaka ułożone w oddzielnych rzędach
+
+									</p>
+									<p>
+										- Suszone minimum 100 godzin.<br>
+										- W opakowaniu 30 cienkich plasterków <br>
+										- Bez dodatu barwników, glutaminianu monosodowego i fosforanów <br>
+										- Bardzo krucha
+									</p>
+									<ul class="nutrients-tags">
+										<li>
+											<p>Kcal</p>
+											<p>189</p>
+										</li>
+										<li>
+											<p><small>Tłuszcz</small></p>
+											<p>9,2g</p>
+										</li>
+										<li>
+											<p><small>Kwas<br>tłuszczowy</small></p>
+											<p>3,6g</p>
+										</li>
+										<li>
+											<p><small>Węglo-<br>wodany</small></p>
+											<p>0,5g</p>
+										</li>
+										<li>
+											<p><small>W tym<br> cukry</small></p>
+											<p>< 0,5g</p>
+										</li>
+										<li>
+											<p><small>Białko</small></p>
+											<p>26g</p>
+										</li>
+										<li>
+											<p><small>Sól</small></p>
+											<p>2,3g</p>
+										</li>
+									</ul>
+								</div>
+								<div class="col-6 packshot vertical-align_center-right _order1">
+									<img src="./archive/images/krakowska_mix1.png" title="" alt="" />	
+								</div>
+					 		</div>
+						</div>
+						<!-- end carousel single item -->
 				  	</div>
 				  	<a class="carousel-control-prev" href="#products-carousel" role="button" data-slide="prev">
 						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -254,7 +498,16 @@
 							<img src="./archive/images/krakowska-2.png" title="" alt="" />	
 						</li>
 						<li data-target="#products-carousel" data-slide-to="1">
-							<img src="./archive/images/krakowska-2.png" title="" alt="" />	
+							<img src="./archive/images/z_filetem.png" title="" alt="" />	
+						</li>
+						<li data-target="#products-carousel" data-slide-to="2">
+							<img src="./archive/images/pieczona.png" title="" alt="" />	
+						</li>
+						<li data-target="#products-carousel" data-slide-to="3">
+							<img src="./archive/images/zywiecka1.png" title="" alt="" />	
+						</li>
+						<li data-target="#products-carousel" data-slide-to="4">
+							<img src="./archive/images/krakowska_mix1.png" title="" alt="" />	
 						</li>
 				  	</ol>
 				</div>	
