Add content to eyecatcher section and tweak onhover in welcome

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <meta property="twitter:title" content="">
 <!-- Font awesome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900&amp;subset=latin-ext" rel="stylesheet">
 <!-- Bootstrap Css styles -->
 <link rel="stylesheet" href="/assets/css/bootstrap-reboot.min.css"> 
 <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
@@ -147,11 +149,14 @@
 		<div id='eyecatcher' class="container-fluid eyecatcher">
 			<div class="inner-container">
 				<div class="row">
-					<div class="col-8"></div>
-					<div class="col-4 half-block vertical-align_center-right dark">
+					<div class="col-6"></div>
+					<div class="col-6 half-block vertical-align_center-right dark">
 						<h2>Każdy detal ma znaczenie</h2>
 						<p class="subline">
 							Wszystko dopracowane do perfekcji. Każde ziarenko pieprzu, szczypta ziół, kryształek soli mają znaczenie.
+						</p>
+						<p>
+Unikalna receptura, najlepsze składniki i wieloletnie doświadczenie – to nasz przepis na niepowtarzalny smak naszych kiełbas suchych. Do ich produkcji wybierane jest najwyższej jakości mięso wieprzowe z szynki oraz idealnie wyważona kompozycja naturalnych ziół i przypraw. Wszystko dopracowane do perfekcji. Wędzone pieczone, a następnie suszone przez wiele dni, nabiera wyjątkowego aromatu i kruchości. Czerpiąc z tradycji co najlepsze, produkowana jest bez użycia sztucznych barwników i glutaminianu sodu. 
 						</p>
 					</div>
 				</div>
