Setup html video player

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 				</a>
 			</div>
 		</div>
-		<div class="container-fluid video">
+		<div class="container-fluid video" style="background: red;">
 			<div class="row">
-				<video controls>
-					<source src="./archive/videos/movie.mp4" type="video/mp4">
-					<source src="./archive/videos/movie.ogg" type="video/ogg">
+				<video autoplay controls loop>
+					<source src="./archive/videos/1_4.mp4" type="video/mp4">
+					<!--<source src="./archive/videos/1_4.ogg" type="video/ogg">-->
 				</video>
 			</div>
 		</div>
