Add minor semantic fixes in html document

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="pl_PL">
+<html lang="pl">
 <head>
 <!-- Basic document meta informations -->	
 <title>Olewnik - plastry</title>
@@ -57,13 +57,13 @@
 				<ul class="menu_rounded inline">
 					<li class="inline-logo _hidden _breakpoint3_visible">
 						<a data-scroll href="#welcome">
-							<img src="./archive/images/logo.png" />
+							<img src="./archive/images/logo.png" title="Olewnik Plastry" alt="Olewnik logo" />
 						</a>
 					</li>
-					<a class="smooth" data-scroll href="#about"><li>Co się kroi?</li></a>
-					<a class="smooth" data-scroll href="#products"><li>Produkty</li></a>
-					<a class="smooth" data-scroll href="#contact"><li>Masz pytanie?</li></a>
-					<a class="_hidden _breakpoint1_visible" target="_blank" href="https://www.facebook.com/olewnikfanpage/"><li><i class="fab fa-facebook"></i></li></a>
+					<li><a class="smooth" data-scroll href="#about">Co się kroi?</a></li>
+					<li><a class="smooth" data-scroll href="#products">Produkty</a></li>
+					<li><a class="smooth" data-scroll href="#contact">Masz pytanie?</a></li>
+					<li class="_hidden _breakpoint1_visible"><a target="_blank" href="https://www.facebook.com/olewnikfanpage/"><i class="fab fa-facebook"></i></a></li>
 				</ul>
 			</nav>
 			<div class="offgrid_fb-shortcut _breakpoint1_hidden">
@@ -74,10 +74,10 @@
 		</div>
 		<div class="dot-nav">
 			<ul class="menu_dotted list">
-				<a class="smooth" data-scroll href="#welcome"><li></li></a>
-				<a class="smooth" data-scroll href="#about"><li></li></a>
-				<a class="smooth" data-scroll href="#products"><li></li></a>
-				<a class="smooth" data-scroll href="#contact"><li></li></a>
+				<li><a class="smooth" data-scroll href="#welcome"></a></li>
+				<li><a class="smooth" data-scroll href="#about"></a></li>
+				<li><a class="smooth" data-scroll href="#products"></a></li>
+				<li><a class="smooth" data-scroll href="#contact"></a></li>
 			</ul>
 		</div>
 	</header>
@@ -163,7 +163,7 @@ Unikalna receptura, najlepsze składniki i wieloletnie doświadczenie – to nas
 				<div class="row">
 					<div class="col">
 						<a data-scroll href="#products" class="button_outlined white smooth">
-							<span>Czytaj więcej</span><i class="fas fa-angle-down"></i></i>
+							<span>Czytaj więcej</span><i class="fas fa-angle-down"></i>
 						</a>
 					</div>
 				</div>
@@ -259,11 +259,11 @@ Unikalna receptura, najlepsze składniki i wieloletnie doświadczenie – to nas
 										</li>
 										<li>
 											<p><small>Węglo-<br>wodany</small></p>
-											<p>< 0,5g</p>
+											<p>&lt; 0,5g</p>
 										</li>
 										<li>
 											<p><small>W tym<br> cukry</small></p>
-											<p>< 0,5g</p>
+											<p>&lt; 0,5g</p>
 										</li>
 										<li>
 											<p><small>Białko</small></p>
@@ -419,7 +419,7 @@ Unikalna receptura, najlepsze składniki i wieloletnie doświadczenie – to nas
 										</li>
 										<li>
 											<p><small>W tym<br> cukry</small></p>
-											<p>< 0,5g</p>
+											<p>&lt; 0,5g</p>
 										</li>
 										<li>
 											<p><small>Białko</small></p>
@@ -471,7 +471,7 @@ Unikalna receptura, najlepsze składniki i wieloletnie doświadczenie – to nas
 										</li>
 										<li>
 											<p><small>W tym<br> cukry</small></p>
-											<p>< 0,5g</p>
+											<p>&lt; 0,5g</p>
 										</li>
 										<li>
 											<p><small>Białko</small></p>
@@ -582,9 +582,9 @@ Unikalna receptura, najlepsze składniki i wieloletnie doświadczenie – to nas
 				<div class="col shrink-col">
 					<ul class="menu_social inline">
 						<li class="title">Social media:</li>
-						<a target="_blank" href="https://www.instagram.com/olewnik_pl/"><li>Instagram</li></a>
-						<a target="_blank" href="https://www.facebook.com/olewnikfanpage/"><li>Facebook</li></a>
-						<a target="_blank" href="https://www.youtube.com/channel/UC4xO6BooPPj29NJZEXxISlw"><li>Youtube</li></a>
+						<li><a target="_blank" href="https://www.instagram.com/olewnik_pl/">Instagram</a></li>
+						<li><a target="_blank" href="https://www.facebook.com/olewnikfanpage/">Facebook</a></li>
+						<li><a target="_blank" href="https://www.youtube.com/channel/UC4xO6BooPPj29NJZEXxISlw">Youtube</a></li>
 					</ul>
 				</div>
 			</div>
